<resources>
    <string name="app_name">From Bad To Chad</string>
    <string name="logout">Logout Bro</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="register">Create New Account</string>
    <string name="hello">Welcome %1$s!</string>
    <string name="workout_button">Generate Workout</string>
    <string name="begin_workout_button">Begin Chad Workout</string>
    <string name="history">HISTORY</string>
    <string name="favorites">Favorited Workouts</string>
    <string name="delete_button">Delete Workout</string>
    <string name="save_button">Save Workout</string>

    <string name="history_instructions">Click any workout to revisit it. (WIP)</string>
    <string name="favorites_instructions">Click any favorited workout to revisit it. (WIP)</string>

    <string name="begin_workout">CHAD WORKOUT</string>
    <string name="title_activity_tutorials">Tutorials</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_gym_maps">GymMaps</string>


</resources>
